@@ -16,7 +16,7 @@ detect_by_control_field() {
   [ -f debian/control ] &&
     grep-dctrl --quiet \
     -F XS-Testsuite,Testsuite \
-    autopkgtest-pkg-$packagetype debian/control
+    -r "^autopkgtest-pkg-$packagetype\$" debian/control
 }
 
 detect_by_source_contents() {
